# IDA_ClassInformer_PlugIn

./: .gitignore  CMakeLists.txt  ClassInformerRes.qrc  IDA_ClassInformer.sln  IDA_ClassInformer_PlugIn.vcxproj  IDA_ClassInformer_PlugIn.vcxproj.filters  Main.cpp  Main.h  MainDialog.cpp  MainDialog.h  README.md  RTTI.cpp  RTTI.h  StdAfx.h  Vftable.cpp  Vftable.h  dialog.ui  undname.h  vcpkg.json
res/: style.qss  view-style.qss
